--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <title>Home &middot; Rabbii TS</title>
+  <script>
+    if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent) ) {
+      // Simulate an HTTP redirect:
+      window.location.replace("http://m.rabbii.co.ke");
+    }
+  </script>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
