[ch #168498884] update how to section width, add trending video

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <script>
     if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent) ) {
       // Simulate an HTTP redirect:
-      window.location.replace("http://m.rabbii.co.ke");
+      window.location.replace("https://m.rabbii.co.ke");
     }
   </script>
 </head>
