[ft #169730472] add business profile script

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,18 @@
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
   <title>Home &middot; Rabbii TS</title>
+  <script type="application/ld+json">
+    { "@context" : "http://schema.org",
+      "@type" : "Organization",
+      "name" : "Rabbii Technology Solutions",
+      "url" : "http://www.rabbii.co.ke",
+      "sameAs" : [ "https://www.facebook.com/rabbiitech/",
+        "https://www.youtube.com/channel/UC5dpUzgKA46Iuh8r9ni1Syg",
+        "https://twitter.com/RabbiiTech",
+        "https://www.linkedin.com/company/rabbii-technology-innovations-ltd/",
+        "https://rabbiits.wordpress.com/"]
+    }
+  </script>
   <script>
     if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|OperaMini/i.test(navigator.userAgent) ) {
       // Simulate an HTTP redirect:
