--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon/favicon.ico">
   <meta name="author" content="Wainaina Gichuhi, CTO - Rabbii Technology Solutions">
-  <meta name="description" content="Private Home tuition in Nairobi Kenya. Rabbii links up clients
+  <meta name="description"
+        content="Private Home tuition Education Services in Nairobi Kenya. Rabbii links up clients
      who want their student to improve their academic grades, learn a new skills in sports, games,
      cooking, technology, local and foreign languages thereby providing employment to the tutors.">
   <!--
@@ -26,7 +27,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>Home &middot; Rabbii TS</title>
+  <title> Home Tuition, Education Services in Nairobi and Across Kenya &middot; Rabbii TS </title>
   <script type="application/ld+json">
     { "@context" : "http://schema.org",
       "@type" : "Organization",
